force-app/main/default/objects/Zip_Code__c/Zip_Code__c.object-meta.xml
<CustomObject>
    <label>Time Zone</label>
    <nameField>
        <label>Zip Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>