force-app/main/default/objects/Zip_Code__c/fields/Current_Offset__c.field-meta.xml
<CustomField>
    <fullName>Current_Offset__c</fullName>
    <label>Current Offset</label>
    <length>250</length>
    <type>Text</type>
</CustomField>