force-app/main/default/objects/Zip_Code__c/fields/GMT_Test__c.field-meta.xml
<CustomField>
    <fullName>GMT_Test__c</fullName>
    <formula>IF( GMT_Time__c &gt;0, &quot;+&quot;&amp;  TEXT(GMT_Time__c) ,  TEXT(GMT_Time__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GMT Test</label>
    <type>Text</type>
</CustomField>