force-app/main/default/objects/Zip_Code__c/fields/GMT_Time__c.field-meta.xml
<CustomField>
    <fullName>GMT_Time__c</fullName>
    <label>GMT Time</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>