force-app/main/default/objects/Zip_Code__c/fields/LAN__c.field-meta.xml
<CustomField>
    <fullName>LAN__c</fullName>
    <label>LAN</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>