force-app/main/default/objects/Zip_Code__c/fields/LAT__c.field-meta.xml
<CustomField>
    <fullName>LAT__c</fullName>
    <label>LAT</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>