force-app/main/default/objects/Zip_Code__c/fields/STATE__c.field-meta.xml
<CustomField>
    <fullName>STATE__c</fullName>
    <label>STATE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>