force-app/main/default/objects/Zip_Code__c/fields/Time_Dynamic__c.field-meta.xml
<CustomField>
    <fullName>Time_Dynamic__c</fullName>
    <formula>IF(HOUR(TIMEVALUE( NOW() + (( GMT_Time__c  * 60 )/ (24 * 60)))) &gt;= 12 ,
TEXT(HOUR(TIMEVALUE( NOW() + (( GMT_Time__c  * 60 )/ (24 * 60))))) + &quot;:&quot;+ RIGHT(&quot;0&quot; &amp; TEXT(MINUTE(TIMEVALUE( NOW() + (( GMT_Time__c  * 60 )/ (24 * 60))))),2) &amp;&quot; &quot;&amp; &quot;PM&quot;,
TEXT(HOUR(TIMEVALUE( NOW() + (( GMT_Time__c  * 60 )/ (24 * 60))))) + &quot;:&quot; + RIGHT(&quot;0&quot; &amp; TEXT(MINUTE(TIMEVALUE( NOW() + (( GMT_Time__c  * 60 )/ (24 * 60))))),2) &amp;&quot; &quot;&amp; &quot;AM&quot;)&amp;&quot; &quot;&amp;&quot;GMT&quot;&amp;  GMT_Test__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Dynamic</label>
    <type>Text</type>
</CustomField>