force-app/main/default/objects/Zip_Code__c/fields/TIMEZONE__c.field-meta.xml
<CustomField>
    <fullName>TIMEZONE__c</fullName>
    <label>TIMEZONE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>