force-app/main/default/objects/Zip_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>CITY__c</columns>
    <columns>Current_Offset__c</columns>
    <columns>TIMEZONE__c</columns>
    <columns>GMT_Time__c</columns>
    <columns>STATE__c</columns>
    <columns>Time_Dynamic__c</columns>
    <columns>ZIP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CITY__c</field>
        <operation>equals</operation>
        <value>Revelstoke</value>
    </filters>
    <label>All</label>
</ListView>