force-app/main/default/objects/Zip_Code__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>CITY__c</columns>
    <columns>Country__c</columns>
    <columns>Current_Offset__c</columns>
    <columns>Time_Dynamic__c</columns>
    <columns>TIMEZONE__c</columns>
    <columns>ZIP__c</columns>
    <columns>STATE__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>